--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Language" content="en" />
     <title>ScanWise Report Craft</title>
     <meta name="description" content="ScanWise Report Generation Platform" />
     <meta name="author" content="ScanWise" />
@@ -20,6 +21,20 @@
 
   <body>
     <div id="root"></div>
+    
+    <!-- Google Translate Widget -->
+    <script>
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+          pageLanguage: 'en',
+          includedLanguages: 'bg',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          autoDisplay: false
+        }, 'google_translate_element');
+      }
+    </script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
